# alabar-python

./: README.md  app.py  appbatch.py  fragments (1).sql  pyproject.toml  scripts.py  session_context.py  test_db.py
alabar/: data.py  models.py  views.py
mockdata/: mockdata.py
templates/: MultipleChoiceText.html  base.html  index.html  items.html  login.html  modifytopic.html  newtopic.html  newtopicitem.html  rating.html  users.html  usersgroup.html
